Added Typica and old style calendar

--- a/prayerbook/readings/typica_2.plist
+++ b/prayerbook/readings/typica_2.plist
@@ -3,85 +3,85 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Глас Ти приносим разбойничь, и молимся: помяни нас, Спасе, во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>我們向祢獻上右盜的呼求，我們祈禱：救主啊，在祢的國度中請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Крест Тебе приносим в прощение прегрешений: егоже нас ради приял еси, Человеколюбче.</string>
 		<key>cn</key>
 		<string>我們向祢獻上十字架，為得過犯的寬恕：你為了我們自願地接受了它，熱愛世人者。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Покланяемся Твоему, Владыко, погребению, и востанию: имиже от тления избавил еси мир, Человеколюбче.</string>
 		<key>cn</key>
 		<string>君宰啊，我們朝拜祢的埋葬與複起，藉此祢使世界脫離腐朽，熱愛世人者。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Смертию Твоею, Господи, пожерта бысть смерть: и Воскресением Твоим, Спасе, мир спасл еси.</string>
 		<key>cn</key>
 		<string>主啊，祢的死亡吞滅了死亡，救主啊，祢以祢的復活拯救了世界。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Мироносицы сретил еси, воскрес от гроба, и учеником возвестил еси, рещи Твое востание.</string>
 		<key>cn</key>
 		<string>祢從墳墓中復活，迎見了攜香液女；且命她們向門徒宣告祢的復活。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Иже во тьме спящии Тя свет видевше, в преисподнейших адовых, Христе, воскресоша.</string>
 		<key>cn</key>
 		<string>昏睡於幽冥中的人在陰府的深淵看見了祢——浩光，基督啊，他們被祢從死者中復活。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Отца прославим, Сыну поклонимся вси, и Святому Духу верно воспоим.</string>
 		<key>cn</key>
 		<string>讓我們榮耀父，讓我們所有人朝拜子，讓我們以信心向聖靈歌唱。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Радуйся Престоле Огнезрачный. Радуйся, Невеста Неневестная. Радуйся, яже Бога человеком Дево рождшая.</string>
 		<key>cn</key>
 		<string>慶哉，烈焰的寶座！慶哉，永貞的淨配！慶哉，童貞女，妳為眾人誕生了上帝！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Егда снизшел еси к смерти, Животе Безсмертный, тогда ад умертвил еси блистанием Божества. Егда же и умершыя от преисподних воскресил еси, вся Силы Небесныя взываху: Жизнодавче, Христе Боже наш, слава Тебе.</string>
 		<key>cn</key>
 		<string>不朽之生命，當祢降至死亡，即以神性之光耀致死了陰府；當祢由大地深處復活了死者，所有天軍則高呼：基督啊，我們的上帝，賦予生命者，榮耀歸於祢！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Воскресл еси от гроба, Всесильне Спасе, и ад, видев чудо, ужасеся, и мертвии восташа; тварь же видящи срадуется Тебе, и Адам свеселится, и мир, Спасе мой, воспевает Тя присно.</string>
 		<key>cn</key>
 		<string>大能的救主，祢從墳墓中復活，地獄見到這一奇跡，恐懼戰兢，死者複起；一切受造物見此與祢一起歡躍，亞當也同為喜樂，我的救主啊，世界永不停歇地讚美祢。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Крепость моя и пение мое Господь, и бысть мне во Спасение.</string>
 		<key>cn</key>
 		<string>上主是我的力量與歌唱，祂也始終作了我的救援。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Наказуя наказа мя Господь, смерти же не предаде мя.</string>
 		<key>cn</key>
 		<string>上主懲罰我雖嚴厲非常，但卻沒有把我交於死亡。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Услышит тя Господь в день печали, защитит тя Имя Бога Иаковля.</string>
 		<key>cn</key>
 		<string>願上主在憂患之日俯允你，雅各伯上帝的名保佑你！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Господи, спаси царя, и услыши ны, воньже аще день призовем Тя.</string>
 		<key>cn</key>
 		<string>上主，求祢拯救君王，我們求祢時，請俯允我們。</string>
