--- a/prayerbook/readings/typica_3.plist
+++ b/prayerbook/readings/typica_3.plist
@@ -3,85 +3,85 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Отвергша, Христе, заповедь Твою, праотца Адама из рая изгнал еси: разбойника же щедре исповедавша Тя на кресте, вонь вселил еси, зовуща: помяни мя, Спасе, во царствии Твоем.</string>
 		<key>cn</key>
 		<string>基督啊，我們的先祖亞當違犯了祢的誡命，被祢逐出樂園；但是祢，仁慈者啊，祢卻將在十字架上宣認祢的右盜送入其中安居，他高呼道：救主啊，在祢的國度中請紀念我！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Согрешших нас смертною осудил еси клятвою, Живодавче и Господи, телом же Твоим, безгрешне Владыко, пострадав,  смертныя оживил еси зовущия: помяни и нас во царствии Твоем.</string>
 		<key>cn</key>
 		<string>主啊，施與生命者，祢向我等犯罪之人施以死亡的詛咒；但無罪的主啊，祢又在祢的肉軀內受難，將生命賜予可朽之人，他們高呼道：在祢的國度中也請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Воскрес из мертвых, совоскресил еси нас от страстей воскресением Твоим, Господи: смертную же всю силу погубил еси, Спасе. Сего ради верою Ти зовем: помяни и нас во царствии Твоем.</string>
 		<key>cn</key>
 		<string>主啊，祢從死者中複起之時，以祢的復活將我們從欲情之中一同復活；救主啊，祢摧毀了死亡的一切能力。因此，我們以信心高呼：在祢的國度中也請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Тридневным Твоим погребением, иже во аде умерщвленныя, яко Бог, оживотворивый, совоздвигл еси, и нетление всем, яко Благ, источил еси нам, верою зовущим всегда: помяни и нас во царствии Твоем.</string>
 		<key>cn</key>
 		<string>祢是賜予生命的上帝，祢在墳墓中三日之久，使陰府中的死者與祢一同複起；祢是良善者，將不朽傾流於眾人，他們以信心永遠高呼道：在祢的國度中也請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Мироносицам женам первее явился еси, воскрес из мертвых, Спасе, возопив: еже радуйтеся, и теми другом Твоим возвещаеши востание Твое, Христе. Сего ради верою Ти зовем: помяни и нас во царствии Твоем.</string>
 		<key>cn</key>
 		<string>救主啊，祢自死者中復活，即先向攜香液女顯現，高聲說：慶哉！基督啊，祢又藉著她們向祢的友人宣告了祢的復活。因此我們以信心向祢高呼：在祢的國度中也請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>На горе Моисей руце распростер, прообразоваше крест, Амалика победивый: мы же верою того на бесы оружие крепкое приемше, вси зовем: помяни и нас во царствии Твоем.</string>
 		<key>cn</key>
 		<string>梅瑟在山上伸出雙臂，作為十字架的預像，並以此擊敗了阿瑪肋克人；我們以信心領受十字架，作為抗擊魔鬼的堅毅武器，一起高呼道：在祢的國度中也請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Отца и Сына, и Духа Святаго воспоим, вернии, Единаго Бога, Единаго Господа, яко от Единаго бо Солнца Трисияннаго есть Троица, и просвещает вся зовущия: помяни и нас во царствии Твоем.</string>
 		<key>cn</key>
 		<string>諸位信者，讓我們歌唱讚美父及子及聖靈，惟一的上帝，惟一的主，如同出於獨一的太陽；因為聖三是三重光明，光照一切呼求「在祢的國度中也請紀念我們」的人。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Радуйся, двере Божия, Еюже пройде воплощься, Создатель, запечатану сохранив Тя. Радуйся, облаче легкий, Божественный дождь носяй Христа, радуйся, Лествице и Престоле Небесный.  Радуйся, Горо Божия Честная, Тучная, Несекомая.</string>
 		<key>cn</key>
 		<string>慶哉，上帝之門戶，降生為人的造物主從中通過，卻沒有破壞妳的封印。慶哉，輕盈的雲彩，妳承載著基督——屬神的甘霖。慶哉，天國的階梯與寶座。慶哉，上帝尊榮之山，碩果累累，卻未經人手開鑿。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Да веселятся небесная, да радуются земная; яко сотвори державу мышцею Своею Господь, попра смертию смерть, первенец мертвых бысть; из чрева адова избави нас, и подаде мирови велию милость.</string>
 		<key>cn</key>
 		<string>願諸天的一切歡欣，願地上的萬有喜悅；因為上主以祂的手臂顯示了大能；以死亡踐滅了死亡，成為死者中的首生者。祂拯救我們脫離陰府的肚腹，並賜予普世宏恩。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Воскресл еси днесь из гроба, Щедре, и нас возвел еси от врат смертных; днесь Адам ликует, и радуется Ева, вкупе же и пророцы с патриархи воспевают непрестанно  Божественную державу власти Твоея.</string>
 		<key>cn</key>
 		<string>仁慈者啊，今日祢從墳墓中復活，並把我們領出死亡之門。今日亞當舞蹈，厄娃歡躍，諸位先知與聖祖也一同不停地歌頌祢大能的屬神權柄。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Пойте Богу нашему, пойте, пойте Цареви нашему, пойте.</string>
 		<key>cn</key>
 		<string>你們應歌頌，歌頌我們的上帝，你們應歌頌，歌頌我們的君主。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Вси языцы восплещите руками, воскликните Богу гласом радования.</string>
 		<key>cn</key>
 		<string>萬民，你們要鼓掌歡騰，也要向上帝歡呼祝慶！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>На Тя, Господи, уповах, да не постыжуся во век.</string>
 		<key>cn</key>
 		<string>上主，我投靠祢，總不會受辱。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Буди ми в Бога Защитителя, и в дом прибежища, еже спасти мя.</string>
 		<key>cn</key>
 		<string>求祢做保護我的上帝，作我避難的磐石，獲救的城堡。</string>
