--- a/prayerbook/readings/typica_4.plist
+++ b/prayerbook/readings/typica_4.plist
@@ -3,85 +3,85 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Древом Адам рая бысть изселен; древом же крестным разбойник в рай вселися. Ов убо вкуш, заповедь отверже Сотворшаго; ов же сраспинаемь, Бога исповеда Таящагося, помяни мя, вопия, во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>因為知善惡之樹亞當被逐出樂園，通過十字架之樹強盜進入樂園安居。因為第一位嘗食了禁果，摒棄了造物主的誡命；第二位與祢一同受釘，宣認了隱秘的上帝，他高呼：在祢的國度中請紀念我！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Вознесыйся на Крест, смертную разрушивый силу, и загладивый, яко Бог, еже на ны рукописание, Господи, разбойниче покаяние и нам подаждь, Едине Человеколюбче, верою служащим, Христе Боже наш, и вопиющим Ти: помяни и нас во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>主啊，祢被舉上十字架，並毀滅了死亡的力量，作為上帝消除了我們的罪案。主啊，惟一熱愛世人者，也將右盜的悔改賜給我們；基督我們的上帝啊，我們忠信地事奉祢，並向祢高呼：在祢的國度中請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Рукописание наше на Кресте копием раздрал еси, и вменився в мертвых, тамошняго мучителя связал еси, избавивый всех от уз адовых воскресением Твоим, имже просветихомся, Человеколюбче Господи, и вопием Ти: помяни и нас во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>祢在十字架上以槍矛撕毀了我們的罪案，並被置於死者之中，祢捆縛了施刑者的暴權，以祢的復活解救所有人脫離陰府的捆綁，惟一熱愛世人的主啊，我們向祢高呼：在祢的國度中請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Распныйся и воскресый яко Силен из гроба тридневен, и первозданнаго Адама воскресивый, Едине Безсмертне: и мене на покаяние обратитися, Господи, сподоби от всего сердца моего, и теплою верою присно взывати Ти: помяни мя, Спасе, во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>惟一不朽者，祢被釘十字架，但作為大能者，第三日又從墳墓中復活，並將首先被造的亞當復活。主啊，也求祢賜我全心悔改，並能永遠以炙熱的信仰向祢高呼：救主啊，在祢的國度中請紀念我！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Нас ради, Иже безстрастен, страстный бысть человек, и волею на Кресте пригвождейся, нас совоскреси, темже и славим со Крестом страсть и воскресение, имиже возсоздахомся, имиже и спасаемся, взывающе: помяни и нас во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>為了我們，無欲情者成為受制於欲情的人類；祂自願地被釘十字架，祂將我們與自己一起復活。因此，我們榮耀祂的十字架、苦難與復活，藉著它們我們被再造、被拯救，我們高呼：在祢的國度中也請紀念我們！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Воскресшаго из мертвых, и адову державу пленившаго, и видима женами мироносицами, радуйтеся, глаголющаго,  вернии умолим, от истления избавити души наша, зовуще всегда разбойника благоразумнаго гласом к Нему: помяни и нас во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>諸位信者，讓我們祈禱自死者中復活的那一位，推翻陰府權勢的那一位，顯現於攜香液女的那位，祂對她們說：慶哉！如此祂將拯救我們的靈魂於喪亡，我們以明智的右盜的話語向祂高呼：在祢的國度中也請紀念我們。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Отца, и Сына, и Святаго Духа, вси единомудренно вернии славословити достойно помолимся: Единство Божества, в Триех сущее Ипостасех, неслиянно пребывающее, Просто, Нераздельно и Неприступно, Имже избавляемся огненнаго мучения.</string>
 		<key>cn</key>
 		<string>諸位信者，讓我們同心一意地祈禱，如此我們將能相乘地榮耀父及子及聖靈，三個位格中的統一神性，絕無混淆地存在，純一，不可分割，不可接近，藉著祂我們脫離烈火的折磨。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Матерь Твою, Христе, плотию без семене рождшую Тя, и Деву воистинну, и по Рождестве пребывшу Нетленну, Сию Ти приводим в молитву, Владыко Многомилостиве, прегрешений прощение даруй, всегда вопиющим Ти: помяни и нас во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>基督啊，至仁慈的君宰，祢的母親不經人道將祢誕生於肉軀中，她是真正的童貞女，並在生育之後依舊不朽，我們將她呈現於祢前代禱：將過犯的寬恕賜予所有不停向祢高呼「在祢的國度中也請紀念我們」的人。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Светлую Воскресения проповедь от Ангела уведевша Господни ученицы и прадеднее осуждение отвергша, апостолом хвалящася глаголаху: испровержеся смерть, воскресе Христос Бог, даруяй мирови велию милость.</string>
 		<key>cn</key>
 		<string>主的女門徒從天使處得知復活的喜訊，知悉對原祖的審判已被廢除，因此歡欣喜悅地傳報使徒：死亡已被毀滅，基督上帝已復活，賜予普世宏恩。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Спас и Избавитель мой из гроба, яко Бог, воскреси от уз земнородныя, и врата адова сокруши, и яко Владыка воскресе тридневен.</string>
 		<key>cn</key>
 		<string>我的救主與解救者，作為上帝，祢使屬地之人擺脫了他們的捆綁，擊碎了地獄之門，並作為君宰在第三日復活。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Яко возвеличишася дела Твоя, Господи, вся премудростию сотворил еси.</string>
 		<key>cn</key>
 		<string>上主，祢的化工，是何其偉大，全是祢以智慧所創辦。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Благослови душе моя, Господа, Господи Боже мой, возвеличился еси зело.</string>
 		<key>cn</key>
 		<string>我的靈魂，請你向上主讚頌！上主我的上帝，祢偉大無限。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Наляцы, и успевай, и царствуй истины ради, и кротости, и правды.</string>
 		<key>cn</key>
 		<string>拉開你的弓，你要為了真理、溫良與正義繁榮昌盛，統治為王。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Возлюбил еси правду, и возненавидел еси беззаконие.</string>
 		<key>cn</key>
 		<string>祢愛護正義，祢又憎恨罪辜。</string>
