--- a/prayerbook/readings/typica_6.plist
+++ b/prayerbook/readings/typica_6.plist
@@ -3,85 +3,85 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Помяни мя Боже Спасе мой, егда приидеши во Царствии Твоем, и спаси мя яко един Человеколюбец.</string>
 		<key>cn</key>
 		<string>上帝我的救主，當祢來為王時，請祢紀念我並拯救我，因為祢是惟一熱愛世人者。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Древом Адама прельстившагося, Древом крестным паки спасл еси и разбойника, вопиюща: помяни мя Господи во Царствии Твоем.</string>
 		<key>cn</key>
 		<string>亞當被一顆樹所欺騙，然而靠著十字架之樹右盜獲得拯救，他高呼道：主啊，在祢的國度中請紀念我。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Адова врата и вереи сокрушивый Жизнодавче, воскресил еси вся Спасе вопиющия: слава востанию Твоему.</string>
 		<key>cn</key>
 		<string>生命的賦予者，祢摧毀了地獄之門府，祢拯救了所有向祢呼喊「榮耀歸於祢的復活」之人。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Помяни мя, Иже смерть пленивый погребением Твоим, и Воскресением Твоим радости вся исполнивый, яко Благоутробен.</string>
 		<key>cn</key>
 		<string>以祢的埋葬捆綁了死亡，祢以祢的復活使萬物充滿喜樂，因為祢是仁慈者。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Мироносицы ко гробу пришедша, ангела зовуща слышаху: Христос воскресе, просветивый всяческая.</string>
 		<key>cn</key>
 		<string>攜香液女前往墳墓，聽聞天使高呼：基督已復活，祂光照了萬有。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>На Древе крестнем пригвоздившагося, и мир от прелести избавльшаго, согласно вси Христа воспоим.</string>
 		<key>cn</key>
 		<string>讓我們齊聲頌揚基督，祂被釘於十字架，且拯救世界於迷誤。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Отца, и Сына славословим, и Духа Святаго, глаголюще: Троице Святая, спаси душы наша.</string>
 		<key>cn</key>
 		<string>讓我們榮贊父、子及聖靈說：至聖聖三，拯救我們的靈魂。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Неизреченно в последняя заченши, и рождши Создателя Твоего, Дево, спасай Тя величающыя.</string>
 		<key>cn</key>
 		<string>妳在末後的世代以無法言喻之道受孕，並誕生了妳的創造者，童貞女啊，拯救讚頌妳的人！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Ангельския Силы на гробе Твоем, и стрегущии омертвеша; и стояше Мария во гробе, ищущи Пречистаго Тела Твоего. Пленил еси ад, не искусився от него; сретил еси Деву, даруяй живот. Воскресый из мертвых, Господи, слава Тебе.</string>
 		<key>cn</key>
 		<string>大能的天使降臨于祢的墳墓，守墓的士兵變得如同死人一般，瑪利亞站在墳墓前，尋找祢至潔的遺體。祢劫掠了地獄，未受它的轄制；祢遇見了童貞女，賜予生命。自死者中復活的主，榮耀歸於祢！</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Живоначальною дланию умершия от мрачных удолий Жизнодавец воскресив всех Христос Бог, воскресение подаде человеческому роду: есть бо всех Спаситель,  Воскресение и Живот, и Бог всех.</string>
 		<key>cn</key>
 		<string>上帝基督，生命的賦予者，以祂賦予生命的手，使眾人由幽暗的墓穴中復生，賜予人類復活；因為祂是眾人的救主，復活與生命，萬有的上帝。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Спаси Господи, люди Твоя, и благослови достояние Твое. </string>
 		<key>cn</key>
 		<string>求你拯救你的人民，降福你的百姓。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>К Тебе, Господи, воззову, Боже мой, да не премолчиши от мене.</string>
 		<key>cn</key>
 		<string>上主，我在向祢呼號，我的上帝，不要對我沉默不語。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Живый в помощи Вышняго, в крове Бога Небесного водворится.</string>
 		<key>cn</key>
 		<string>凡居住在至高者帡幪下的人，必得安息在天國上帝的庇蔭下。</string>
 	</dict>
 	<dict>
-		<key>en</key>
+		<key>ru</key>
 		<string>Речет Господеви: Заступник мой еси и Прибежище мое, Бог мой, и уповаю на Него.</string>
 		<key>cn</key>
 		<string>他向上主說：「祢是我的護佑者，祢是我的避難所。祂是我的上帝，我寄望於祂。」</string>
