Options dialog shows fasting choices

--- a/prayerbook/prayerbook-Info.plist
+++ b/prayerbook/prayerbook-Info.plist
@@ -25,7 +25,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>ponomar</string>
+				<string>ponomar-ru</string>
 			</array>
 		</dict>
 	</array>
