--- a/CalendarWidget/Info.plist
+++ b/CalendarWidget/Info.plist
@@ -24,10 +24,10 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.rlc.ponomar.CalendarWidget</string>
+			<string>com.rlc.ponomar-ru.CalendarWidget</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>ponomar</string>
+				<string>ponomar-ru</string>
 			</array>
 		</dict>
 	</array>
