--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Fasting type</key>
+	<string>Степень поста</string>
 	<key>Laymen fasting</key>
 	<string>Пост для мирян</string>
 	<key>Monastic fasting</key>
@@ -17,14 +19,14 @@
 	<key>If you enjoy using Orthodox Calendar, would you mind taking a moment to rate it? It won&apos;t take more than a minute. Thanks for your support!
     </key>
 	<string>Если Вам понравилось это приложение, пожалуйста оцените его. Спасибо за поддержку!</string>
-	<key>(C) 2015 Brotherhood of Sts Apostoles Peter and Paul, Hong Kong. This app contains information from ponomar.net and orthodox.cn</key>
-	<string>(C) 2015 Приход Свв. Апп. Петра и Павла в Гонконге (Московский Патриархат)</string>
+	<key>(C) 2016 Brotherhood of Sts Apostoles Peter and Paul, Hong Kong.</key>
+	<string>(C) 2016 Приход Свв. Апп. Петра и Павла в Гонконге (Московский Патриархат)</string>
 	<key>Nuts</key>
 	<string>Орехи</string>
 	<key>Bread</key>
 	<string>Хлеб</string>
 	<key>Vegetables</key>
-	<string>Овощи</string>
+	<string>Овощи, фрукты</string>
 	<key>Cheese</key>
 	<string>Сыр</string>
 	<key>Cupcake</key>
