--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Holy Ancestors</key>
+	<string>святым Богоотцам</string>
+	<key>Theotokos</key>
+	<string>Богородице</string>
 	<key>St. Nicholas</key>
 	<string>святителю</string>
 	<key>St. John</key>
