--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -16,8 +16,7 @@
 	<string>Напомнить позже</string>
 	<key>No, thanks</key>
 	<string>Нет, спасибо</string>
-	<key>If you enjoy using Orthodox Calendar, would you mind taking a moment to rate it? It won&apos;t take more than a minute. Thanks for your support!
-    </key>
+	<key>If you enjoy using Orthodox Calendar, would you mind taking a moment to rate it? It won&apos;t take more than a minute. Thanks for your support!</key>
 	<string>Если Вам понравилось это приложение, пожалуйста оцените его. Спасибо за поддержку!</string>
 	<key>(C) 2016 Brotherhood of Sts Apostoles Peter and Paul, Hong Kong.</key>
 	<string>(C) 2016 Приход Свв. Апп. Петра и Павла в Гонконге (Московский Патриархат)</string>
