RTFDocument  and synaxarion

--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Thursday of the Great Canon, with the Life of St. Mary of Egypt</key>
+	<string>Четверток Великого канона (Мариино стояние)</string>
 	<key>New Year</key>
 	<string>Новолетию</string>
 	<key>Synaxis of all saints of Moscow</key>
