Options UI refactored. Synaxarion and church history added.

--- a/prayerbook/trans_ui_ru.plist
+++ b/prayerbook/trans_ui_ru.plist
@@ -18,8 +18,8 @@
 	<string>Нет, спасибо</string>
 	<key>If you enjoy using Orthodox Calendar, would you mind taking a moment to rate it? It won&apos;t take more than a minute. Thanks for your support!</key>
 	<string>Если Вам понравилось это приложение, пожалуйста оцените его. Спасибо за поддержку!</string>
-	<key>(C) 2017 Brotherhood of Sts Apostoles Peter and Paul, Hong Kong.</key>
-	<string>(C) 2017 Приход Свв. Апп. Петра и Павла в Гонконге (Московский Патриархат)</string>
+	<key>Brotherhood of Sts Apostoles Peter and Paul, Hong Kong.</key>
+	<string>Приход Свв. Апп. Петра и Павла в Гонконге (Московский Патриархат)</string>
 	<key>Nuts</key>
 	<string>Орехи</string>
 	<key>Bread</key>
