--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -34,12 +34,12 @@
 	<string>равноапп.</string>
 	<key>Apostle</key>
 	<string>апостола</string>
-	<key>St. George</key>
+	<key>Great Martyr</key>
 	<string>великомученика</string>
 	<key>Hierarchs</key>
 	<string>святителей</string>
 	<key>Venerable</key>
-	<string>преподобного</string>
+	<string>прп.</string>
 	<key>Fathers</key>
 	<string>прпп.</string>
 	<key>Martyrs</key>
