--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -104,6 +104,10 @@
 	<string>上帝圣灵日</string>
 	<key>Trinity Saturday; Commemoration of the Departed</key>
 	<string>纪念亡者</string>
+    <key>The Saturday of the Dead</key>
+    <string>纪念亡者</string>
+    <key>Thursday of the Great Canon, with the Life of St. Mary of Egypt</key>
+    <string></string>
 	<key>Chelnskoy and Pskov-Kiev Caves called “Tenderness” icons of the Mother of God</key>
 	<string>琴斯托霍瓦及普斯科夫的“邬弥勒涅”圣母像纪念日</string>
 	<key>Apodosis of the Ascension</key>
