Added "saints" button

--- a/prayerbook/prayerbook-Info.plist
+++ b/prayerbook/prayerbook-Info.plist
@@ -64,5 +64,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>saints-ru</string>
+    </array>
 </dict>
 </plist>
