--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -9,7 +9,7 @@
 	<key>Synaxis of all saints of Moscow</key>
 	<string>Собор Московских святых</string>
 	<key>Synaxis of all saints of Nizhny Novgorod</key>
-	<string>Собор Нижнегородских святых</string>
+	<string>Собор Нижегородских святых</string>
 	<key>Commemoration of the Holy Fathers of the First Six Councils</key>
 	<string>Память свв. отцев шести Вселенских Соборов</string>
 	<key>Holy Ancestors</key>
