--- a/prayerbook/prayerbook-Info.plist
+++ b/prayerbook/prayerbook-Info.plist
@@ -50,6 +50,10 @@
 	<string>This app would like to add image to your Photo Library</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app does not require access to the photo library.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIMainStoryboardFile~ipad</key>
