days of remembrance

--- a/prayerbook/trans_cal_ru.plist
+++ b/prayerbook/trans_cal_ru.plist
@@ -90,6 +90,8 @@
 	<string>Сухоядение</string>
 	<key>Demetrius Saturday: Commemoration of the Departed</key>
 	<string>Димитриевская родительская суббота</string>
+    <key>Commemoration of Fallen Soldiers</key>
+    <string>Поминовение усопших воинов</string>
 	<key>Apodosis of the Annunciation</key>
 	<string>Отдание Благовещения Пресвятой Богородицы</string>
 	<key>Forefeast of the Annunciation</key>
